<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginScreen">

    <include
        layout="@layout/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="120dp"
            android:id="@+id/logo"
            android:src="@drawable/ic_path_6316"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:background="@drawable/bg_for_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/headerMsgText"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/main_color"
                    android:textSize="20sp"
                    android:text="@string/sign_in_or_create_account"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:text="@string/policyholder_account"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:ems="10"
                    android:paddingStart="12dp"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/main_color_dim"
                    android:background="@drawable/bg_for_edit_text" />

                <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_gravity="center_horizontal"
                    android:padding="15dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    android:text="@string/next"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_for_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>